--- a/msbuild/Tromino2d/Tromino2d.vcxproj
+++ b/msbuild/Tromino2d/Tromino2d.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="..\..\src\gui\cli_options.hpp" />
     <ClInclude Include="..\..\src\gui\init.hpp" />
     <ClInclude Include="..\..\src\gui\params.hpp" />
+    <ClInclude Include="..\..\src\gui\solver_state.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\gui\callback.cpp" />
